--- a/.github/workflows/shared-build-image.yml
+++ b/.github/workflows/shared-build-image.yml
@@ -58,6 +58,13 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
+      - name: show 1
+        run: |
+          echo 'login server'
+          echo  ${{ inputs.registry-login-server }}
+          echo 'repository'
+          echo ${{ inputs.container-repository}}
+
       - name: Build and push image to Azure Container Registry
         run: dotnet publish -c Release ${{ inputs.project-path }} --os linux --arch x64 --version-suffix ${{ inputs.version-suffix }} -p:PublishProfile=DefaultContainer -p:ContainerRepository=${{ inputs.container-repository }} -p:ContainerImageTags=${{ inputs.image-tags }} -p:ContainerRegistry=${{ inputs.registry-login-server }} -p:ContainerRegistryUsername=${{ secrets.REGISTRY_USERNAME }} -p:ContainerRegistryPassword=${{ secrets.REGISTRY_PASSWORD }} -p:ContainerRegistryUseSSL=true
 
