--- a/.github/workflows/shared-deploy-containerapps.yml
+++ b/.github/workflows/shared-deploy-containerapps.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Build and push container image to registry
         uses: azure/container-apps-deploy-action@v2
         with:
-          imageToDeploy:  ${{ inputs.registry-login-server }}/${{ inputs.container-repository }}:latest
+          imageToDeploy:  ${{ inputs.registry-login-server }}/${{ inputs.container-repository }}:${{ inputs.image-tag }}
           registryUrl: ${{ inputs.registry-login-server }}
           registryUsername: ${{ secrets.REGISTRY_USERNAME }}
           registryPassword: ${{ secrets.REGISTRY_PASSWORD }}
