--- a/ch11/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch11/Codebreaker.AppHost/Properties/launchSettings.json
@@ -1,16 +1,16 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:15100"
     }
-  }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
