--- a/ch12/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch12/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../Common.props" />
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -7,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsAspireSharedProject>true</IsAspireSharedProject>
-		<Configurations>Debug;Release;Debug-Prometheus;Release-Prometheus</Configurations>
+		<Configurations>Debug;Release</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -32,7 +31,7 @@
 		<Otherwise>
 			<ItemGroup>
 				<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.0.0" />
-				<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.0.0" />
+				<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.1.0" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
