--- a/ch12/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch12/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -14,6 +14,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.2.23619.3" />
+		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.22" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
