--- a/ch12/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch12/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\CodeBreaker.Blazor.Host\CodeBreaker.Blazor.Host.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
   </ItemGroup>
