--- a/ch06/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch06/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.3.23629.1" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.3.23629.1" />
+    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.3.24105.21" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.3.24105.21" />
   </ItemGroup>
   
   <ItemGroup>
