--- a/ch10/Codebreaker.GameAPIs/appsettings.json
+++ b/ch10/Codebreaker.GameAPIs/appsettings.json
@@ -5,7 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DataStore": "InMemory",
-  "SolutionEnvironment": "Test"
+  "AllowedHosts": "*"
 }
