--- a/ch03/Codebreaker.AppHost/appsettings.json
+++ b/ch03/Codebreaker.AppHost/appsettings.json
@@ -3,8 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Aspire.Hosting.Dcp": "Information"
+      "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "InMemory"
+  "DataStore": "Cosmos",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+  }
 }
