--- a/ch04/server/Codebreaker.GameAPIs/appsettings.json
+++ b/ch04/server/Codebreaker.GameAPIs/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DataStore": "SqlServer",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+  "AllowedHosts": "*"
 }
