--- a/ch04/client/Codebreaker.Console/Codebreaker.Console.csproj
+++ b/ch04/client/Codebreaker.Console/Codebreaker.Console.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
+	<IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
