--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,6 @@
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="aspire" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json" />
+    <add key="azure-sdk-for-net-dev" value="https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json" />
   </packageSources>
 </configuration>
