--- a/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch07/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,13 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.3.24105.21" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.3.24105.21" />
+    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.5.24165.8" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.5.24165.8" />
   </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
+    <ProjectReference Include="..\Codebreaker.CosmosCreate\Codebreaker.CosmosCreate.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
+    <ProjectReference Include="..\Codebreaker.InitalizeAppConfig\Codebreaker.InitalizeAppConfig.csproj" />
+    <ProjectReference Include="..\Codebreaker.SqlServerMigration\Codebreaker.SqlServerMigration.csproj" />
+    <ProjectReference Include="..\ConfigurationPrototype\ConfigurationPrototype.csproj" />
   </ItemGroup>
 
 </Project>
