--- a/ch07/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch07/Codebreaker.AppHost/Properties/launchSettings.json
@@ -9,7 +9,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263",
+        "AZURE_USERNAME": "christiannagel@live.com"
       }
     }
   }
