--- a/ch08/workflows/shared-test.yml
+++ b/ch08/workflows/shared-test.yml
@@ -4,11 +4,11 @@ on:
   workflow_call:
     inputs:
       project-name:
-        description: 'The name of the project to build'
+        description: 'The name of the project'
         required: true
         type: string
       solution-path:
-        description: 'The solution file of the project to build'
+        description: 'The solution file of the project to build and run tests'
         required: true
         type: string
       dotnet-version:
@@ -16,7 +16,6 @@ on:
         required: false
         type: string
         default: '8.0.x'
-      
 jobs:
   run-test:
     runs-on: ubuntu-latest
@@ -26,10 +25,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with: 
           dotnet-version: ${{ inputs.dotnet-version }}
-          dotnet-quality: 'preview'
+
+# this is the version for the release
+#      - name: Install .NET Aspire workload
+#        run: dotnet workload install aspire
+
+# temporary version for daily build
+      - name: Update workloads
+        run: dotnet workload update --skip-sign-check --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json
+
+      - name: Install .NET Aspire workload
+        run: dotnet workload install aspire --skip-sign-check --source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json
 
       - name: Restore NuGet Packages
         run: dotnet restore ${{ inputs.solution-path }}
@@ -38,7 +47,7 @@ jobs:
         run: dotnet test --logger trx --results-directory "TestResults-${{ inputs.project-name}}" --no-restore ${{ inputs.solution-path }}
 
       - name: Upload the test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results-${{ inputs.project-name}}
           path: TestResults-${{ inputs.project-name}}
