--- a/ch13/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch13/Codebreaker.Live/Codebreaker.Live.csproj
@@ -10,15 +10,12 @@
   <ItemGroup>
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.26" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
