--- a/ch13/LiveTestClient/appsettings.json
+++ b/ch13/LiveTestClient/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
+    }
+  },
   "Codebreaker.Live": {
     "LiveUrl": "http://localhost:5130/livesubscribe"
   }
