--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -11,17 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.1.0-preview.*" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
   </ItemGroup>
   
   <ItemGroup>
