--- a/ch15/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch15/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -21,11 +21,17 @@
 	</ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Confluent.Kafka" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.1.0-preview.*" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.1.0-preview.*" />
+		<PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
 	</ItemGroup>
 
 
