--- a/ch15/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch15/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -12,11 +12,11 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 
-		<PackageReference Include="Azure.Identity" Version="1.11.0" />
+		<PackageReference Include="Azure.Identity" Version="1.11.3" />
 		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.4.0" />
-		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.1.0-preview.*" />
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.0" />
-        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.0" />
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.7.24251.11" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.0" />
@@ -31,8 +31,8 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.1.0" />
-				<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.1.0" />
+				<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.2.0" />
+				<PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.1.1" />
 			</ItemGroup>
 		</Otherwise>
 	</Choose>
