--- a/ch15/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch15/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -19,7 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.1.0-preview.*" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
 	</ItemGroup>
 
 	<ItemGroup>
